[gd_scene load_steps=18 format=3 uid="uid://cqxilutin3sv7"]

[ext_resource type="FontFile" uid="uid://dxp6ry5jo3k1l" path="res://theme/font2.ttf" id="1_wa50s"]
[ext_resource type="Script" path="res://scripts/menu_bar.gd" id="1_ywdks"]
[ext_resource type="Texture2D" uid="uid://cfcdii1bckes4" path="res://sprites/logo.png" id="2_o166k"]
[ext_resource type="Script" path="res://scripts/forge.gd" id="3_4mvwp"]
[ext_resource type="Script" path="res://scripts/details.gd" id="4_b2iur"]
[ext_resource type="AudioStream" uid="uid://c0ijs406xqp40" path="res://theme/click1.wav" id="6_yyovx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmbkw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a22j4"]
bg_color = Color(0.568627, 0, 0.0941176, 0.470588)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_82v3s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0jijq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jshlp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_igmef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2qc5m"]
bg_color = Color(0.18359, 0.18359, 0.18359, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgmwu"]
bg_color = Color(0.18359, 0.18359, 0.18359, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fni7k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vd6sx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rosae"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -171.0
offset_right = 148.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Title"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wa50s")
theme_override_font_sizes/font_size = 64
text = "File Forge"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="TextureRect" parent="Title"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture = ExtResource("2_o166k")

[node name="Title2" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -171.0
offset_right = 148.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Title2"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wa50s")
theme_override_font_sizes/font_size = 64
text = "File Forge"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="TextureRect" parent="Title2"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture = ExtResource("2_o166k")

[node name="Menu" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 64.0
script = ExtResource("1_ywdks")

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 2
alignment = 1

[node name="NewButton" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_mode = 0
text = "New"
flat = true

[node name="SaveButton" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_mode = 0
text = "Save"
flat = true

[node name="LoadButton" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_mode = 0
text = "Load"
flat = true

[node name="ImportButton" type="Button" parent="Menu/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_mode = 0
text = "Import"
flat = true

[node name="ExportButton" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_mode = 0
text = "Export"
flat = true

[node name="HelpButton" type="Button" parent="Menu/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
focus_mode = 0
text = "Help"

[node name="VSeparator" type="VSeparator" parent="Menu/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 96
theme_override_styles/separator = SubResource("StyleBoxEmpty_cmbkw")

[node name="Label" type="Label" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(1125, 0)
layout_mode = 2
text = "No Project"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="VSeparator2" type="VSeparator" parent="Menu/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 225
theme_override_styles/separator = SubResource("StyleBoxEmpty_cmbkw")

[node name="HideWindowButton" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "⚊"
flat = true

[node name="MinMaxWindowButton" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "❐"
flat = true

[node name="CloseWindowButton" type="Button" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_a22j4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a22j4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_82v3s")
text = "✖"

[node name="Forge" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4mvwp")

[node name="Tree" type="Tree" parent="Forge"]
custom_minimum_size = Vector2(1332, 984)
layout_mode = 2
offset_left = 32.0
offset_top = 16.0
offset_right = 1364.0
offset_bottom = 1000.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_0jijq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jshlp")
scroll_horizontal_enabled = false

[node name="Details" type="Control" parent="Forge"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -504.0
offset_top = -488.0
offset_right = -56.0
offset_bottom = 488.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_b2iur")

[node name="VBoxContainer" type="VBoxContainer" parent="Forge/Details"]
custom_minimum_size = Vector2(450, 950)
layout_mode = 2
offset_right = 400.0
offset_bottom = 978.0

[node name="Label" type="Label" parent="Forge/Details/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Leaf"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="HSeparator" type="HSeparator" parent="Forge/Details/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TypeContainer" type="TabContainer" parent="Forge/Details/VBoxContainer"]
custom_minimum_size = Vector2(0, 900)
layout_mode = 2
tooltip_text = "Set variable"
theme_override_font_sizes/font_size = 24
tab_alignment = 1
current_tab = 0
tab_focus_mode = 0

[node name="String" type="VBoxContainer" parent="Forge/Details/VBoxContainer/TypeContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HSeparator" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/String"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_igmef")

[node name="Label" type="Label" parent="Forge/Details/VBoxContainer/TypeContainer/String"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set String Text"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/String"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TextEdit" type="TextEdit" parent="Forge/Details/VBoxContainer/TypeContainer/String"]
custom_minimum_size = Vector2(0, 700)
layout_mode = 2
placeholder_text = "Enter text"
wrap_mode = 1
caret_blink = true

[node name="Numeral" type="VBoxContainer" parent="Forge/Details/VBoxContainer/TypeContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HSeparator" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Numeral"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_igmef")

[node name="Label" type="Label" parent="Forge/Details/VBoxContainer/TypeContainer/Numeral"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set Float/Int Number"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Numeral"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="SpinBox" type="SpinBox" parent="Forge/Details/VBoxContainer/TypeContainer/Numeral"]
layout_mode = 2
step = 0.01
allow_greater = true
allow_lesser = true
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="Bool" type="VBoxContainer" parent="Forge/Details/VBoxContainer/TypeContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="HSeparator" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Bool"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_igmef")

[node name="Label" type="Label" parent="Forge/Details/VBoxContainer/TypeContainer/Bool"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set Bool"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Bool"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CheckButton" type="CheckButton" parent="Forge/Details/VBoxContainer/TypeContainer/Bool"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
focus_mode = 0
theme_override_constants/outline_size = 0
theme_override_constants/align_to_largest_stylebox = 1
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2qc5m")
theme_override_styles/hover = SubResource("StyleBoxFlat_cgmwu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fni7k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vd6sx")
theme_override_constants/check_v_offset = 0
text = "false"
alignment = 1

[node name="Array" type="VBoxContainer" parent="Forge/Details/VBoxContainer/TypeContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HSeparator" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Array"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_igmef")

[node name="Label" type="Label" parent="Forge/Details/VBoxContainer/TypeContainer/Array"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Set Array Elements"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Array"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="AddElementButton" type="Button" parent="Forge/Details/VBoxContainer/TypeContainer/Array"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Add Element"

[node name="HSeparator3" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Array"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_rosae")

[node name="ScrollContainer" type="ScrollContainer" parent="Forge/Details/VBoxContainer/TypeContainer/Array"]
custom_minimum_size = Vector2(440, 680)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="ArrayContainer" type="VBoxContainer" parent="Forge/Details/VBoxContainer/TypeContainer/Array/ScrollContainer"]
custom_minimum_size = Vector2(430, 680)
layout_mode = 2

[node name="Clear" type="VBoxContainer" parent="Forge/Details/VBoxContainer/TypeContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="HSeparator" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Clear"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_igmef")

[node name="Label" type="Label" parent="Forge/Details/VBoxContainer/TypeContainer/Clear"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Clear Array"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Forge/Details/VBoxContainer/TypeContainer/Clear"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="ClearButton" type="Button" parent="Forge/Details/VBoxContainer/TypeContainer/Clear"]
layout_mode = 2
focus_mode = 0
text = "Clear"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_yyovx")

[node name="ResizeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1887.0
offset_top = 1035.0
offset_right = 1916.0
offset_bottom = 1076.0
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "◿"
flat = true

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_top = 1040.0
offset_right = 41.0
offset_bottom = 1081.0
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "⛭"
flat = true

[connection signal="pressed" from="Menu/HBoxContainer/NewButton" to="Menu" method="_on_new_button_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/SaveButton" to="Menu" method="_on_save_button_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/LoadButton" to="Menu" method="_on_load_button_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/ImportButton" to="Menu" method="_on_import_button_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/ExportButton" to="Menu" method="_on_export_button_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/HideWindowButton" to="Menu" method="_on_hide_window_button_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/MinMaxWindowButton" to="Menu" method="_on_min_max_window_button_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/CloseWindowButton" to="Menu" method="_on_close_window_button_pressed"]
[connection signal="gui_input" from="Forge" to="Forge" method="_on_gui_input"]
[connection signal="button_clicked" from="Forge/Tree" to="Forge" method="_on_tree_button_clicked"]
[connection signal="gui_input" from="Forge/Tree" to="Forge" method="_on_gui_input"]
[connection signal="item_edited" from="Forge/Tree" to="Forge" method="_on_tree_item_edited"]
[connection signal="item_selected" from="Forge/Tree" to="Forge" method="_on_tree_item_selected"]
[connection signal="visibility_changed" from="Forge/Details" to="Forge/Details" method="_on_visibility_changed"]
[connection signal="text_changed" from="Forge/Details/VBoxContainer/TypeContainer/String/TextEdit" to="Forge/Details" method="_on_text_edit_text_changed"]
[connection signal="value_changed" from="Forge/Details/VBoxContainer/TypeContainer/Numeral/SpinBox" to="Forge/Details" method="_on_spin_box_value_changed"]
[connection signal="toggled" from="Forge/Details/VBoxContainer/TypeContainer/Bool/CheckButton" to="Forge/Details" method="_on_check_button_toggled"]
[connection signal="pressed" from="Forge/Details/VBoxContainer/TypeContainer/Array/AddElementButton" to="Forge/Details" method="_on_add_element_button_pressed"]
[connection signal="pressed" from="Forge/Details/VBoxContainer/TypeContainer/Clear/ClearButton" to="Forge/Details" method="_on_clear_button_pressed"]
[connection signal="button_down" from="ResizeButton" to="Menu" method="_on_resize_button_button_down"]
[connection signal="pressed" from="SettingsButton" to="Menu" method="_on_settings_button_pressed"]
